2008-01-20  Andreas Røsdal  <andreasr@gnome.org>

	* src/lib/gtkui/dialogs.py:
	* src/lib/gtkui/gtkui.py:
	* src/lib/defaults.py.in:
	* glade/glchess.glade:
	* glade/Makefile.am:
	* glade/preferences.glade: Add preferece dialog and reorganize menus.
	Reported by Robert Ancell in bug #443447. Patch by me.


2008-01-12  Andreas Røsdal  <andreasr@gnome.org>

	* glade/glchess.glade:
	* glade/network_game.glade: Reuse strings from libgames-support, for string consolidation
	across games.

2008-01-12  Andreas Røsdal  <andreasr@gnome.org>

	* src/glchess.in.in: Port bugfix #406672 from sudoku to glChess.

2008-01-11  Andreas Røsdal  <andreasr@gnome.org>

	* /glade/glchess.glade: Move "View logs" to "View" menu. Patch from me in 
	bug #499519.

2008-01-10  Andreas Røsdal  <andreasr@gnome.org>

	* src/glchess.in:
	* src/glchess.in.in:
	* src/lib/defaults.py.in: Allow glChess to be run from source distribution, without
	requiring a full install. To run glChess from the source distribution, 
	simply execute make and then: $ python glchess/src/glchess

2007-12-27  Robert Ancell  <robert.ancell@gmail.com>

	* Fix bugs in SAN move generation (correctly record takes for en passant, show check hints for
	  castling, don't treat promotion as a take)
	* Support resigning in saved games
	* Stop players from moving after the game has completed

2007-12-24  Robert Ancell  <robert.ancell@gmail.com>

	* lib/scene/opengl/opengl.py: Mark animation as complete when pieces are deleted (fixes game
	  history crash reported in bug #488525)
        * lib/game.py: Use LAN move if unable to generate SAN move (Bug #445772)

2007-08-12  Andreas Røsdal  <andreasr@gnome.org>

	* src/lib/scene-cairo/__init__.py: Mark board numbers for translation,
	reported in Bug #471238.

2007-11-17  Robert Ancell  <robert.ancell@gmail.com>

	* lib/gtkui/gtkui.py: Set toolbar style to default system style (Glade 2 bug) (Bug #497504)