@@ -1,3 +1,8 @@
+2008-01-25  Robert Ancell  <robert.ancell@gmail.com>
+
+	* Set new/load/save/preferences/about dialogs to be transient of the main application
+	  window (always centered and on top, not in window list) (Bug #510911).
+
 2008-01-20  Andreas Røsdal  <andreasr@gnome.org>
 
 	* src/lib/gtkui/dialogs.py:
@@ -7,7 +12,6 @@
 	* glade/Makefile.am:
 	* glade/preferences.glade: Add preferece dialog and reorganize menus.
 	Reported by Robert Ancell in bug #443447. Patch by me.
-
 
 2008-01-12  Andreas Røsdal  <andreasr@gnome.org>
 
